# otp-server

./: .env.example  Cargo.toml  Dockerfile  config.yaml  docker-compose.yml
src/: handler.rs  main.rs  mojang.rs  packet.rs  store.rs
